Version: 2.x
Date:
    Features:
        - Focus the built count and fixed count edit boxes when first opening them.
        - Add a dark mode checkbox to the preferences.
    Bugfixes:
        - Recipes no longer have excessive question marks in their names
        - Moved mining and research bonuses have to the Preferences screen.
    Internal changes:
        - Added rudimentary tools for drawing tab controls.
----------------------------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: October 23rd 2024
    Bugfixes:
        - Yafc no longer crashes with enabling all feature flags for the Factorio Space Age DLC.
----------------------------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: October 20th 2024
    Features:
        - Updated to (only) work with Factorio 2.0
Version: 0.10.0
Date: Not released separately
    Features:
        - Add OSX-arm64 build.
        - Display link warnings in both the tooltips and the dropdowns.
        - Add additional ways of counting buildings and modules when displaying the shopping list.
        - Allow disable-and-reload when there's an error loading a mod.
    Bugfixes:
        - Fixed recipes now become accessible when their crafter does.
        - Keyboard and UI fixes/improvements in the Welcome screen.
    Internal changes:
        - Allow tooltips to be displayed when hovering over radio buttons.
        - Require parentheses when mixing && and || in the same expression.
----------------------------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: September 8th 2024
    Bugfixes:
        - Fix boiler recipes that accept multiple input temperatures; they respect the selected temperature again.
          (Note: This is specific to boilers. Factorio does not let assembly machines react to input temperatures.)